Add user interface